Initial source commit

--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 #      Main Configs       #
 # ----------------------- #
 
-url: http://gao715108023.github.io
+url: http://365day.github.io
 title: Alfred's Blog
 subtitle: A blogging framework for hackers.
 author: GaoChuanjun
