--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 
 url: http://365day.github.io
 title: Alfred's Blog
-subtitle: A blogging framework for hackers.
+subtitle: 博客，不仅仅是分享，也是一个自我学习的过程——alfred.2014/05/07
 author: GaoChuanjun
 simple_search: https://www.google.com/search
 description:
